--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "2.0.44",
+    "@ai-sdk/openai": "^1.0.0",
     "@ai-sdk/react": "2.0.107",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
